--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
 	"require": {
 		"squizlabs/php_codesniffer": "^3.1",
 		"de-swebhosting/php-codestyle": "^1.0",
-		"codeception/codeception": "^2.5.4 || ^3",
-		"typo3/testing-framework": "~5.0.14"
+		"codeception/codeception": "^2.5.4",
+		"typo3/testing-framework": "~4.12.0"
 	},
 	"autoload": {
 		"psr-4": {
