[BUGFIX] Fix autoload config in composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"De\\SWebhosting\\Buildtools": "src/"
+			"De\\SWebhosting\\Buildtools\\": "src/"
 		}
 	}
 }
