--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
 	],
 	"require": {
 		"squizlabs/php_codesniffer": "^3.1",
-		"de-swebhosting/php-codestyle": "^1.0",
 		"codeception/module-asserts": "^1.1",
 		"codeception/module-webdriver": "^1.0.1",
 		"codeception/codeception": "^4.0",
 		"typo3/testing-framework": "~6.2.3"
+	},
+	"suggest": {
+		"de-swebhosting/php-codestyle": "Currently required to run t3_check_codestyle.sh"
 	},
 	"autoload": {
 		"psr-4": {
