--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	],
 	"require": {
 		"squizlabs/php_codesniffer": "^3.1",
-		"de-swebhosting/php-codestyle": "^1.0",
+		"de-swebhosting/php-codestyle": "^1.0|^2.0|^3.0",
 		"codeception/codeception": "^2.5.4",
 		"typo3/testing-framework": "~4.12.0"
 	},
