[BUGFIX] Fix file search path in lintPhp command
Thanks to @sfroemkenjw for reporting the issue!

--- a/testing-docker/docker-compose.yml
+++ b/testing-docker/docker-compose.yml
@@ -713,7 +713,7 @@ services:
           set -x
         fi
         php -v | grep '^PHP'
-        find typo3/ -name \\*.php -print0 | xargs -0 -n1 -P4 php -dxdebug.mode=off -l >/dev/null
+        find . -name \\*.php ! -path "./.Build/\\*" -print0 | xargs -0 -n1 -P4 php -dxdebug.mode=off -l >/dev/null
       "
   unit:
     image: typo3/core-testing-${DOCKER_PHP_IMAGE}:latest
