--- a/testing-docker/docker-compose.yml
+++ b/testing-docker/docker-compose.yml
@@ -744,6 +744,20 @@ services:
         composer dumpautoload;
       "
 
+  composer_normalize:
+    image: typo3/core-testing-${DOCKER_PHP_IMAGE}:latest
+    user: "${HOST_UID}"
+    volumes:
+      - ${CORE_ROOT}:${CORE_ROOT}
+    working_dir: ${CORE_ROOT}
+    command: >
+      /bin/sh -c "
+        if [ ${SCRIPT_VERBOSE} -eq 1 ]; then
+          set -x
+        fi
+        composer normalize ${CGLCHECK_DRY_RUN};
+      "
+
   composer_test_distribution:
     image: typo3/core-testing-${DOCKER_PHP_IMAGE}:latest
     user: "${HOST_UID}"
