--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
 	],
 	"require": {
 		"squizlabs/php_codesniffer": "^3.1",
-		"codeception/module-asserts": "^1.1",
-		"codeception/module-webdriver": "^1.0.1",
-		"codeception/codeception": "^4.0",
-		"phpunit/phpunit": "^8.5.21",
-		"typo3/testing-framework": "^6.15.1"
+		"codeception/module-asserts": "^3.0.0",
+		"codeception/module-webdriver": "^4.0.0",
+		"codeception/codeception": "^5.0.10",
+		"phpunit/phpunit": "^10.1.1",
+		"typo3/testing-framework": "dev-main"
 	},
 	"suggest": {
 		"de-swebhosting/php-codestyle": "Currently required to run t3_check_codestyle.sh"
