--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
 		"bin/t3_run_tests.sh"
 	],
 	"require": {
-		"squizlabs/php_codesniffer": "^3.1",
 		"codeception/module-asserts": "^1.3.1",
 		"codeception/module-webdriver": "^1.4.0",
 		"codeception/codeception": "^4.1.22",
@@ -18,7 +17,8 @@
 		"typo3/testing-framework": "^6.16.6"
 	},
 	"suggest": {
-		"de-swebhosting/php-codestyle": "Currently required to run t3_check_codestyle.sh"
+		"de-swebhosting/php-codestyle": "Required to run t3_check_codestyle.sh",
+		"squizlabs/php_codesniffer": "Required to run t3_check_codestyle.sh"
 	},
 	"autoload": {
 		"psr-4": {
