--- a/testing-docker/docker-compose.yml
+++ b/testing-docker/docker-compose.yml
@@ -503,7 +503,7 @@ services:
     user: "${HOST_UID}"
     volumes:
       - ${CORE_ROOT}:${CORE_ROOT}
-    working_dir: ${CORE_ROOT}/.Build
+    working_dir: ${CORE_ROOT}
     command: >
       /bin/sh -c "
         if [ ${SCRIPT_VERBOSE} -eq 1 ]; then
